--- a/ubisoft/v1/products.jsonc
+++ b/ubisoft/v1/products.jsonc
@@ -162,6 +162,8 @@
       17772, // Episode 1 Insanity DLC
       17773, // Episode 2 Pagan: Control DLC
       17774, // Episode 3 Joseph: Collapse DLC
+	    61404, // Lost Between Worlds
+      17812,
       17812,
       17813,
       17814,
